--- a/Brackets/Client/html/index.html
+++ b/Brackets/Client/html/index.html
@@ -11,9 +11,7 @@
 
 	    <!-- JS -->
 	    <!-- load Angular, Firebase, Firebase Angular Library, and custom app.js -->
-	    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js"></script>
-	    <script src="https://cdn.firebase.com/js/client/1.1.1/firebase.js"></script>
-	    <script src="https://cdn.firebase.com/libs/angularfire/0.8.0/angularfire.min.js"></script>
+	    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
 	    <script src="../js/app.js"></script>
 	</head>
 	<body>
@@ -29,7 +27,7 @@
 
 		    <div class="col-xs-4 text-center" ng-repeat="day in days">
 		              
-		      <h2>{{ Tournament.NBA.Cleveland. }}</h2>
+		      <h2>{{  }}</h2>
 		      
 		      <div class="time-slot" ng-repeat="slot in day.slots">       
 		        <input type="checkbox" id="{{ day.name }}-{{ $index }}" ng-model="slot.booked"> <!-- ng-disabled="slot.booked" -->
@@ -48,17 +46,6 @@
 
 		</div>  
 	</body>
-	<script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
 	<script>
-	//Not neccessary as of right now
-	  // Initialize Firebase
-	  var config = {
-	    apiKey: "AIzaSyBkZZn_OmW1bVAwMc3YxBIUkuePU-gswKU",
-	    authDomain: "bracketproject-c457b.firebaseapp.com",
-	    databaseURL: "https://bracketproject-c457b.firebaseio.com",
-	    storageBucket: "bracketproject-c457b.appspot.com",
-	    messagingSenderId: "1004545424305"
-	  };
-	  firebase.initializeApp(config);
 	</script>
 </html>
